--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 S.Drawing.init('.canvas'); 
                 document.body.classList.add('body--ready');
                 // Chuỗi chữ chạy
-                S.UI.simulate("Chúc|cậu|20/10|vui vẻ|hạnh phúc|❤️"); 
+                S.UI.simulate("Chúc|cậu|20/10|vui vẻ|❤️"); 
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
@@ -734,3 +734,4 @@
     </script>
 </body>
 </html>
+
