--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 S.Drawing.init('.canvas'); 
                 document.body.classList.add('body--ready');
                 // Chuỗi chữ chạy
-                S.UI.simulate("Chuc|embe|20/10|vui ve|❤️"); 
+                S.UI.simulate("Chuc|cau|20/10|vui ve|❤️"); 
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
@@ -734,5 +734,6 @@
     </script>
 </body>
 </html>
+
 
 
